add distributionManagement, fix spaces